# anyboxes

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt
.github/: CODEOWNERS  codecov.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pr_description_enforcer.yml  release.yml
examples/: examples.py
src/anyboxes/: __init__.py  _errors.py
src/anyboxes/implementations/: __init__.py  origin.py
src/anyboxes/implementations/torch/: __init__.py  _typing.py  boxes.py  coordinates.py
tests/: conftest.py  test_boxes.py  test_boxes_representations.py  test_boxes_transformations.py  test_errors.py
tests/tests/: data.py
